--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,53 @@
-backports.shutil-get-terminal-size==1.0.0
+arrow==0.10.0
+binaryornot==0.4.4
+certifi==2017.7.27.1
+chardet==3.0.4
+click==6.7
+colorama==0.3.9
+cookiecutter==1.6.0
 decorator==4.1.2
-enum34==1.1.6
-ipython==5.5.0
+future==0.16.0
+hupper==1.0
+idna==2.6
+ipython==6.2.1
 ipython-genutils==0.2.0
-pathlib2==2.3.0
-pexpect==4.2.1
+jedi==0.11.0
+Jinja2==2.9.6
+jinja2-time==0.2.0
+Mako==1.0.7
+MarkupSafe==1.0
+parso==0.1.0
+PasteDeploy==1.5.2
 pickleshare==0.7.4
+plaster==1.0
+plaster-pastedeploy==0.4.1
+poyo==0.4.1
 prompt-toolkit==1.0.15
-ptyprocess==0.5.2
+psycopg2==2.7.3.2
+py==1.4.34
 Pygments==2.2.0
-scandir==1.6
+pyramid==1.9.1
+pyramid-debugtoolbar==4.3
+pyramid-jinja2==2.7
+pyramid-mako==1.0.2
+pyramid-retry==0.5
+pyramid-tm==2.2
+pytest==3.2.3
+python-dateutil==2.6.1
+repoze.lru==0.7
+requests==2.18.4
 simplegeneric==0.8.1
 six==1.11.0
+SQLAlchemy==1.1.14
 traitlets==4.3.2
+transaction==2.1.2
+translationstring==1.3
+urllib3==1.22
+venusian==1.1.0
+waitress==1.1.0
 wcwidth==0.1.7
-psycopg2==2.7.3
-pytest==3.2.3
+WebOb==1.7.3
+whichcraft==0.4.1
+zope.deprecation==4.3.0
+zope.interface==4.4.3
+zope.sqlalchemy==0.7.7
